pingpong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-app
  template:
    metadata:
      labels:
        app: pingpong-app
    spec:
      containers:
        - name: pingpong-app
          image: pingpong-app:1.0
          imagePullPolicy: IfNotPresent
