pingpong/manifests/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: exercises
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
