pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-app-svc
  namespace: exercises
spec:
  type: LoadBalancer
  selector:
    app: pingpong-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
